# rappel

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  agents.md  build.rs  build_wheel.sh  merge_wheels.sh  rappel_lang.py
docs/: Dag-Runner.md  (+16 more)
example_app/: 1  Dockerfile  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml  test_workflows.py
example_app/scripts/: start-daemons.sh
example_app/src/example_app/: __init__.py  web.py  workflows.py
example_app/tests/: test_web.py
python/: debug_ir.py  pyproject.toml  worker.py
python/benchmarks/: benchmark_workflow.py  run_benchmark.py  test_recovery.py
python/proto/: __init__.py  ast_pb2.py  ast_pb2.pyi  ir_pb2.py  ir_pb2.pyi  messages_pb2.py  messages_pb2.pyi  messages_pb2_grpc.py  messages_pb2_grpc.pyi
python/src/carabiner/: __init__.py  exceptions.py
python/src/carabiner_worker/: __init__.py  actions.py  bridge.py  registry.py  serialization.py  worker.py  workflow.py  workflow_dag.py  workflow_runtime.py
python/src/rappel/: __init__.py  action_worker.py  actions.py  bridge.py  cli.py  durable.py  instance_worker.py  ir.py  ir_builder.py  registry.py  runner.py  serialization.py  worker.py  workflow.py  workflow_dag.py  workflow_runtime.py
python/src/rappel_worker/: worker.py
python/tests/: benchmark_workflow.py  conftest.py  test_actions.py  test_benchmark.py  test_bridge.py  test_dependencies.py  test_exceptions.py  test_formatter.py  test_ir_builder.py  test_ir_errors.py  test_ir_parser.py  test_public_api.py  test_pytest_in_memory_runtime.py  test_registry.py  test_schedule.py  test_serialization.py  test_worker.py  test_workflow.py  test_workflow_dag.py  test_workflow_dependencies.py  test_workflow_runtime.py
python/tests/fixtures/: test_actions.py
python/tests/fixtures_actions/: __init__.py  action_kwargs.py  (+3 more)
python/tools/: parse_bench_logs.py
(+403 files in other folders)
