[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
waymark = { path = "crates/waymark" }
waymark-proto = { path = "crates/proto" }

anyhow = "1"
clap = "4.5"
proptest = "1.9"
prost = "0.12"
prost-types = "0.12"
serde = "1"
serde_json = "1"
sha2 = "0.10"
tokio = "1"
tonic = "0.11"
tonic-build = "0.11"
uuid = "1"
