[project]
name = "example-app"
version = "0.1.0"
description = "Backend workflow demo that exercises waymark workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6,<3",
    "asyncpg>=0.29,<1",
    "waymark"
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["example_app*"]

[tool.uv.sources]
waymark = { path = "../python" }
