[project]
name = "carabiner-worker"
version = "0.1.0"
description = "Python worker transport harness for benchmarking"
requires-python = ">=3.12"
dependencies = [
    "protobuf>=5.29,<6",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ty>=0.0.1a26",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"proto/messages_pb2.pyi" = ["N802"]

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../Cargo.toml"
python-source = "src"
module-name = "carabiner_worker._bridge"
